--- a/po/fr.po
+++ b/po/fr.po
@@ -4,14 +4,15 @@
 #
 # Nicolas Velin <nicolas@velin.fr>, 2008.
 # Claude Paroz <claude@2xlibre.net>, 2008-2011.
+# Stéphane Aulery <lkppo@free.fr>, 2015
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.28.2\n"
+"Project-Id-Version: gst-plugins-good 1.4.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-07-19 16:30+0200\n"
-"PO-Revision-Date: 2011-04-28 09:22+0200\n"
-"Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
+"POT-Creation-Date: 2015-06-07 09:35+0200\n"
+"PO-Revision-Date: 2015-04-26 19:35+0200\n"
+"Last-Translator: Stéphane Aulery <lkppo@free.fr>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -19,10 +20,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Jack server not found"
-msgstr ""
+msgstr "serveur Jack introuvable"
 
 msgid "Failed to decode JPEG image"
-msgstr "Échec de décodage de l'image JPEG"
+msgstr "Échec de décodage de l’image JPEG"
 
 #. TRANSLATORS: 'song title' by 'artist name'
 #, c-format
@@ -89,6 +90,9 @@ msgstr ""
 msgid "This file contains too many streams. Only playing first %d"
 msgstr "Ce fichier contient trop de flux. Seuls les %d premiers seront lus."
 
+msgid "Internal data flow error."
+msgstr "Erreur interne de flux de données."
+
 msgid ""
 "No supported stream was found. You might need to install a GStreamer RTSP "
 "extension plugin for Real media streams."
@@ -104,9 +108,6 @@ msgstr ""
 "Aucun flux pris en charge n'a été trouvé. Il faut peut-être autoriser "
 "davantage de protocoles de transport ou il manque peut-être le bon greffon "
 "d'extension GStreamer RTSP."
-
-msgid "Internal data flow error."
-msgstr "Erreur interne de flux de données."
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -175,13 +176,11 @@ msgstr "Entrée AUX 1"
 msgid "AUX 2 In"
 msgstr "Entrée AUX 2"
 
-#, fuzzy
 msgid "Codec Loopback"
-msgstr "Boucle interne"
+msgstr "Codec boucle interne"
 
-#, fuzzy
 msgid "SunVTS Loopback"
-msgstr "Boucle interne"
+msgstr "SunVTS boucle interne"
 
 msgid "Volume"
 msgstr "Volume"
@@ -222,62 +221,52 @@ msgstr ""
 msgid "Could not map buffers from device '%s'"
 msgstr "Impossible de mapper les tampons du périphérique « %s »."
 
-#, fuzzy, c-format
+#, c-format
 msgid "The driver of device '%s' does not support the IO method %d"
 msgstr ""
-"Le pilote du périphérique « %s » ne prend en charge aucune méthode "
-"d'enregistrement connue."
+"Le pilote du périphérique « %s » ne prend en charge la méthode d’entrée-"
+"sortie %d"
 
-#, fuzzy, c-format
+#, c-format
 msgid "The driver of device '%s' does not support any known IO method."
 msgstr ""
-"Le pilote du périphérique « %s » ne prend en charge aucune méthode "
-"d'enregistrement connue."
+"Le pilote du périphérique « %s » ne prend en charge aucune méthode d’entrée-"
+"sortie connue."
 
-#, fuzzy, c-format
-msgid "Device '%s' does not support video capture"
-msgstr "Le périphérique « %s » n'est pas un périphérique de sortie."
-
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' is busy"
-msgstr "Le périphérique « %s » n'est pas un périphérique de sortie."
+msgstr "Périphérique « %s » occupé"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' cannot capture at %dx%d"
-msgstr "Le périphérique « %s » n'est pas un périphérique d'enregistrement."
+msgstr ""
+"Le périphérique « %s » ne peut pas capturer avec une résolution de %d x %d"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' cannot capture in the specified format"
-msgstr "Le périphérique « %s » n'est pas un périphérique d'enregistrement."
+msgstr "Le périphérique « %s » ne peut pas capturer dans le format spécifié"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' does support non-contiguous planes"
-msgstr "Le périphérique « %s » n'est pas un périphérique de sortie."
+msgstr ""
 
 #, c-format
 msgid "Could not get parameters on device '%s'"
 msgstr "Impossible d'obtenir les paramètres du périphérique « %s »"
 
-#, fuzzy
 msgid "Video device did not accept new frame rate setting."
 msgstr ""
-"Le périphérique d'entrée vidéo n'a pas accepté le nouveau paramètre de "
-"fréquence d'image."
+"Le périphérique vidéo n'a pas accepté le nouveau paramètre de fréquence "
+"d'image."
 
-#, fuzzy
 msgid "Video device did not provide output format."
-msgstr ""
-"Le périphérique d'entrée vidéo n'a pas accepté le nouveau paramètre de "
-"fréquence d'image."
+msgstr "Le périphérique vidéo n'a pas fourni de format de sortie."
 
 msgid "Video device returned invalid dimensions."
 msgstr ""
 
-#, fuzzy
 msgid "Video devices uses an unsupported interlacing method."
 msgstr ""
-"Le pilote du périphérique « %s » ne prend en charge aucune méthode "
-"d'enregistrement connue."
 
 msgid "Video devices uses an unsupported pixel format."
 msgstr ""
@@ -285,16 +274,13 @@ msgstr ""
 msgid "Failed to configure internal buffer pool."
 msgstr ""
 
-#, fuzzy
 msgid "Video device did not suggest any buffer size."
-msgstr ""
-"Le périphérique d'entrée vidéo n'a pas accepté le nouveau paramètre de "
-"fréquence d'image."
+msgstr "Le périphérique vidéo n'a suggéré aucune taille de cache."
 
 msgid "No downstream pool to import from."
 msgstr ""
 
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to get settings of tuner %d on device '%s'."
 msgstr ""
 "Impossible d'obtenir les paramètres du syntoniseur %d du périphérique « %s »."
@@ -303,9 +289,9 @@ msgstr ""
 msgid "Error getting capabilities for device '%s'."
 msgstr "Erreur de lecture de %d octets sur le périphérique « %s »."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' is not a tuner."
-msgstr "Le périphérique « %s » n'est pas un périphérique de sortie."
+msgstr "Le périphérique « %s » n'est pas un syntoniseur."
 
 #, fuzzy, c-format
 msgid "Failed to get radio input on device '%s'. "
@@ -331,27 +317,20 @@ msgstr ""
 "Le pilote du périphérique « %s » ne prend en charge aucune méthode "
 "d'enregistrement connue."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Converter on device %s has no supported output format"
 msgstr ""
-"Le périphérique d'entrée vidéo n'a pas accepté le nouveau paramètre de "
-"fréquence d'image."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Encoder on device %s has no supported input format"
 msgstr ""
-"Le périphérique d'entrée vidéo n'a pas accepté le nouveau paramètre de "
-"fréquence d'image."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Encoder on device %s has no supported output format"
 msgstr ""
-"Le périphérique d'entrée vidéo n'a pas accepté le nouveau paramètre de "
-"fréquence d'image."
 
-#, fuzzy
 msgid "Failed to start decoding thread."
-msgstr "Échec de décodage de l'image JPEG"
+msgstr "Échec de démarrage du processus de décodage."
 
 msgid "Failed to process frame."
 msgstr ""
@@ -401,9 +380,9 @@ msgstr "Le périphérique « %s » n'est pas un périphérique d'enregistremen
 msgid "Device '%s' is not a output device."
 msgstr "Le périphérique « %s » n'est pas un périphérique de sortie."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' is not a M2M device."
-msgstr "Le périphérique « %s » n'est pas un périphérique de sortie."
+msgstr "Le périphérique « %s » n'est pas un périphérique M2M."
 
 #, fuzzy, c-format
 msgid "Could not dup device '%s' for reading and writing."
@@ -463,354 +442,5 @@ msgstr ""
 msgid "Cannot operate without a clock"
 msgstr "Impossible de fonctionner sans horloge"
 
-#~ msgid "Got unexpected frame size of %u instead of %u."
-#~ msgstr "Taille de trame imprévue de %u à la place de %u."
-
-#~ msgid "Failed trying to get video frames from device '%s'."
-#~ msgstr "L'obtention de trames vidéo du périphérique « %s » a échoué."
-
-#~ msgid "Failed after %d tries. device %s. system error: %s"
-#~ msgstr "Échec après %d tentatives. périphérique %s. erreur système : %s"
-
-#~ msgid "Bass"
-#~ msgstr "Basses"
-
-#~ msgid "Treble"
-#~ msgstr "Aiguës"
-
-#~ msgid "Synth"
-#~ msgstr "Synth"
-
-#~ msgid "PCM"
-#~ msgstr "PCM"
-
-#~ msgid "Speaker"
-#~ msgstr "Haut-parleur"
-
-#~ msgid "Line-in"
-#~ msgstr "Entrée ligne"
-
-#~ msgid "CD"
-#~ msgstr "CD"
-
-#~ msgid "Mixer"
-#~ msgstr "Mélangeur"
-
-#~ msgid "PCM-2"
-#~ msgstr "PCM-2"
-
-#~ msgid "Record"
-#~ msgstr "Enregistrement"
-
-#~ msgid "In-gain"
-#~ msgstr "Gain d'entrée"
-
-#~ msgid "Out-gain"
-#~ msgstr "Gain de sortie"
-
-#~ msgid "Line-1"
-#~ msgstr "Ligne 1"
-
-#~ msgid "Line-2"
-#~ msgstr "Ligne 2"
-
-#~ msgid "Line-3"
-#~ msgstr "Ligne 3"
-
-#~ msgid "Digital-1"
-#~ msgstr "Numérique 1"
-
-#~ msgid "Digital-2"
-#~ msgstr "Numérique 2"
-
-#~ msgid "Digital-3"
-#~ msgstr "Numérique 3"
-
-#~ msgid "Phone-in"
-#~ msgstr "Entrée casque"
-
-#~ msgid "Phone-out"
-#~ msgstr "Sortie casque"
-
-#~ msgid "Video"
-#~ msgstr "Vidéo"
-
-#~ msgid "Radio"
-#~ msgstr "Radio"
-
-#~ msgid "Could not open audio device for mixer control handling."
-#~ msgstr ""
-#~ "Impossible d'ouvrir le périphérique audio pour la gestion des contrôles "
-#~ "de mixage."
-
-#~ msgid ""
-#~ "Could not open audio device for mixer control handling. This version of "
-#~ "the Open Sound System is not supported by this element."
-#~ msgstr ""
-#~ "Impossible d'ouvrir le périphérique audio pour la gestion des contrôles "
-#~ "de mixage. Cette version de OSS (Open Sound System) n'est pas prise en "
-#~ "charge par cet élément."
-
-#~ msgid "Master"
-#~ msgstr "Volume général"
-
-#~ msgid "Front"
-#~ msgstr "Avant"
-
-#~ msgid "Rear"
-#~ msgstr "Arrière"
-
-#~ msgid "Headphones"
-#~ msgstr "Écouteurs"
-
-#~ msgid "Center"
-#~ msgstr "Centre"
-
-#~ msgid "LFE"
-#~ msgstr "LFE"
-
-#~ msgid "Surround"
-#~ msgstr "Ambiophonie"
-
-#~ msgid "Side"
-#~ msgstr "Côté"
-
-#~ msgid "AUX Out"
-#~ msgstr "Sortie AUX"
-
-#~ msgid "3D Depth"
-#~ msgstr "Profondeur 3D"
-
-#~ msgid "3D Center"
-#~ msgstr "Centre 3D"
-
-#~ msgid "3D Enhance"
-#~ msgstr "Amélioration 3D"
-
-#~ msgid "Telephone"
-#~ msgstr "Téléphone"
-
-#~ msgid "Video In"
-#~ msgstr "Entrée vidéo"
-
-#~ msgid "AUX In"
-#~ msgstr "Entrée AUX"
-
-#~ msgid "Record Gain"
-#~ msgstr "Gain d'enregistrement"
-
-#~ msgid "Output Gain"
-#~ msgstr "Gain de sortie"
-
-#~ msgid "Microphone Boost"
-#~ msgstr "Amplification micro"
-
-#~ msgid "Diagnostic"
-#~ msgstr "Diagnostic"
-
-#~ msgid "Bass Boost"
-#~ msgstr "Amplification basses"
-
-#~ msgid "Playback Ports"
-#~ msgstr "Ports de lecture"
-
-#~ msgid "Input"
-#~ msgstr "Entrée"
-
-#~ msgid "Monitor Source"
-#~ msgstr "Source de moniteur"
-
-#~ msgid "Keyboard Beep"
-#~ msgstr "Bip de clavier"
-
-#~ msgid "Simulate Stereo"
-#~ msgstr "Stéréo simulée"
-
-#~ msgid "Stereo"
-#~ msgstr "Stéréo"
-
-#~ msgid "Surround Sound"
-#~ msgstr "Son ambiophonique"
-
-#~ msgid "Microphone Gain"
-#~ msgstr "Gain de microphone"
-
-#~ msgid "Speaker Source"
-#~ msgstr "Source de haut-parleur"
-
-#~ msgid "Microphone Source"
-#~ msgstr "Source de microphone"
-
-#~ msgid "Jack"
-#~ msgstr "Jack"
-
-#~ msgid "Center / LFE"
-#~ msgstr "Centre / LFE"
-
-#~ msgid "Stereo Mix"
-#~ msgstr "Mélangeur stéréo"
-
-#~ msgid "Mono Mix"
-#~ msgstr "Mélangeur mono"
-
-#~ msgid "Input Mix"
-#~ msgstr "Mélangeur d'entrée"
-
-#~ msgid "Microphone 1"
-#~ msgstr "Microphone 1"
-
-#~ msgid "Microphone 2"
-#~ msgstr "Microphone 2"
-
-#~ msgid "Digital Out"
-#~ msgstr "Sortie numérique"
-
-#~ msgid "Digital In"
-#~ msgstr "Entrée numérique"
-
-#~ msgid "HDMI"
-#~ msgstr "HDMI"
-
-#~ msgid "Modem"
-#~ msgstr "Modem"
-
-#~ msgid "Handset"
-#~ msgstr "Combiné"
-
-#~ msgid "Other"
-#~ msgstr "Autre"
-
-#~ msgid "None"
-#~ msgstr "Aucun"
-
-#~ msgid "On"
-#~ msgstr "Activé"
-
-#~ msgid "Off"
-#~ msgstr "Désactivé"
-
-#~ msgid "Mute"
-#~ msgstr "Son coupé"
-
-#~ msgid "Fast"
-#~ msgstr "Rapide"
-
-#~ msgid "Very Low"
-#~ msgstr "Très bas"
-
-#~ msgid "Low"
-#~ msgstr "Bas"
-
-#~ msgid "Medium"
-#~ msgstr "Moyen"
-
-#~ msgid "High"
-#~ msgstr "Élevé"
-
-#~ msgid "Very High"
-#~ msgstr "Très élevé"
-
-#~ msgid "Production"
-#~ msgstr "Production"
-
-#~ msgid "Front Panel Microphone"
-#~ msgstr "Micro du panneau avant"
-
-#~ msgid "Front Panel Line In"
-#~ msgstr "Entrée ligne du panneau avant"
-
-#~ msgid "Front Panel Headphones"
-#~ msgstr "Écouteurs du panneau avant"
-
-#~ msgid "Front Panel Line Out"
-#~ msgstr "Sortie ligne du panneau avant"
-
-#~ msgid "Green Connector"
-#~ msgstr "Connecteur vert"
-
-#~ msgid "Pink Connector"
-#~ msgstr "Connecteur rose"
-
-#~ msgid "Blue Connector"
-#~ msgstr "Connecteur bleu"
-
-#~ msgid "White Connector"
-#~ msgstr "Connecteur blanc"
-
-#~ msgid "Black Connector"
-#~ msgstr "Connecteur noir"
-
-#~ msgid "Gray Connector"
-#~ msgstr "Connecteur gris"
-
-#~ msgid "Orange Connector"
-#~ msgstr "Connecteur orange"
-
-#~ msgid "Red Connector"
-#~ msgstr "Connecteur rouge"
-
-#~ msgid "Yellow Connector"
-#~ msgstr "Connecteur jaune"
-
-#~ msgid "Green Front Panel Connector"
-#~ msgstr "Connecteur vert du panneau avant"
-
-#~ msgid "Pink Front Panel Connector"
-#~ msgstr "Connecteur rose du panneau avant"
-
-#~ msgid "Blue Front Panel Connector"
-#~ msgstr "Connecteur bleu du panneau avant"
-
-#~ msgid "White Front Panel Connector"
-#~ msgstr "Connecteur blanc du panneau avant"
-
-#~ msgid "Black Front Panel Connector"
-#~ msgstr "Connecteur noir du panneau avant"
-
-#~ msgid "Gray Front Panel Connector"
-#~ msgstr "Connecteur gris du panneau avant"
-
-#~ msgid "Orange Front Panel Connector"
-#~ msgstr "Connecteur orange du panneau avant"
-
-#~ msgid "Red Front Panel Connector"
-#~ msgstr "Connecteur rouge du panneau avant"
-
-#~ msgid "Yellow Front Panel Connector"
-#~ msgstr "Connecteur jaune du panneau avant"
-
-#~ msgid "Spread Output"
-#~ msgstr "Sortie partagée"
-
-#~ msgid "Downmix"
-#~ msgstr "Mélange réduit"
-
-#~ msgid "Virtual Mixer Input"
-#~ msgstr "Entrée de mélangeur virtuel"
-
-#~ msgid "Virtual Mixer Output"
-#~ msgstr "Sortie de mélangeur virtuel"
-
-#~ msgid "Virtual Mixer Channels"
-#~ msgstr "Canaux de mélangeur virtuel"
-
-#~ msgid "%s %d Function"
-#~ msgstr "Fonction %s %d"
-
-#~ msgid "%s Function"
-#~ msgstr "Fonction %s"
-
-#~ msgid "Error reading %d bytes on device '%s'."
-#~ msgstr "Erreur de lecture de %d octets sur le périphérique « %s »."
-
-#~ msgid "Could not enqueue buffers in device '%s'."
-#~ msgstr ""
-#~ "Impossible de mettre les tampons en file d'attente sur le périphérique "
-#~ "« %s »."
-
-#~ msgid "Could not establish connection to sound server"
-#~ msgstr "Impossible d'établir une connexion vers le serveur de son"
-
-#~ msgid "Failed to query sound server capabilities"
-#~ msgstr ""
-#~ "Échec lors de l'interrogation du serveur de son au sujet de ses capacités"
+#~ msgid "Device '%s' does not support video capture"
+#~ msgstr "Le périphérique « %s » ne prend en charge la capture video."
