--- a/po/nb.po
+++ b/po/nb.po
@@ -6,10 +6,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 1.2.1\n"
+"Project-Id-Version: gst-plugins-good 1.3.90\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-07-19 16:30+0200\n"
-"PO-Revision-Date: 2014-01-22 17:49+0100\n"
+"POT-Creation-Date: 2015-06-07 09:35+0200\n"
+"PO-Revision-Date: 2014-07-22 13:14+0100\n"
 "Last-Translator: Johnny A. Solbu <johnny@solbu.net>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb_NO\n"
@@ -85,6 +85,9 @@ msgstr "Videoen i denne filen spilles kanskje ikke av korrekt."
 msgid "This file contains too many streams. Only playing first %d"
 msgstr "Filen inneholder for mange strømmer. Spiller bare første %d"
 
+msgid "Internal data flow error."
+msgstr "Intern dataflytfeil."
+
 msgid ""
 "No supported stream was found. You might need to install a GStreamer RTSP "
 "extension plugin for Real media streams."
@@ -100,9 +103,6 @@ msgstr ""
 "Ingen støttet strøm ble funnet. Du må kanskje tillate flere "
 "transportprotokoller eller den kan mangle den rette GStreamer RTSP-"
 "utvidelsestillegget."
-
-msgid "Internal data flow error."
-msgstr "Intern dataflytfeil."
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -225,10 +225,6 @@ msgid "The driver of device '%s' does not support any known IO method."
 msgstr "Driveren av enheten «%s» støtter ikke noen kjente IO-metoder."
 
 #, c-format
-msgid "Device '%s' does not support video capture"
-msgstr "Enhet «%s» støtter ikke videoopptak"
-
-#, c-format
 msgid "Device '%s' is busy"
 msgstr "Enheten «%s» er opptatt"
 
@@ -240,9 +236,9 @@ msgstr "Enhet «%s» kan ikke fange ved %dx%d"
 msgid "Device '%s' cannot capture in the specified format"
 msgstr "Enhet «%s» kan ikke fange i det angitte formatet"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' does support non-contiguous planes"
-msgstr "Enhet «%s» støtter ikke videoopptak"
+msgstr "Enhet «%s» støtter ikke ikke-sammenhengende plan"
 
 #, c-format
 msgid "Could not get parameters on device '%s'"
@@ -251,30 +247,26 @@ msgstr "Kunne ikke få parametere på enheten «%s»."
 msgid "Video device did not accept new frame rate setting."
 msgstr "Videoenheten aksepterte ikke ny bildefrekvensinnstilling."
 
-#, fuzzy
 msgid "Video device did not provide output format."
-msgstr "Videoenheten aksepterte ikke ny bildefrekvensinnstilling."
+msgstr "Videoenhet tilbød ikke utdataformat."
 
 msgid "Video device returned invalid dimensions."
-msgstr ""
+msgstr "Videoenhet returnerte ugyldige dimensjoner."
 
-#, fuzzy
 msgid "Video devices uses an unsupported interlacing method."
-msgstr "Driveren av enheten «%s» støtter ikke IO metoden %d"
+msgstr "Video-enheter bruker en ustøttet linjeflettingsmetode."
 
 msgid "Video devices uses an unsupported pixel format."
-msgstr ""
+msgstr "Videoenhet bruker et ustøttet pikselformat."
 
-#, fuzzy
 msgid "Failed to configure internal buffer pool."
-msgstr "Videoenhet kan ikke opprette bufferkø"
+msgstr "Klarte ikke å konfigurere internt bufferområde"
 
-#, fuzzy
 msgid "Video device did not suggest any buffer size."
-msgstr "Videoenhet kan ikke opprette bufferkø"
+msgstr "Videoenhet foreslo ikke noen bufferstørrelse."
 
 msgid "No downstream pool to import from."
-msgstr ""
+msgstr "Ingen nedstrømsområde å importere fra."
 
 #, c-format
 msgid "Failed to get settings of tuner %d on device '%s'."
@@ -301,33 +293,32 @@ msgid "Failed to change mute state for device '%s'."
 msgstr "Klarte ikke å endre dempe-modus for enheten «%s»."
 
 msgid "Failed to allocated required memory."
-msgstr ""
+msgstr "Kunne ikke tildele nødvendige minne."
 
 msgid "Failed to allocate required memory."
-msgstr ""
+msgstr "Kunne ikke tildele nødvendige minne."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Converter on device %s has no supported input format"
-msgstr "Driveren av enheten «%s» støtter ikke IO metoden %d"
+msgstr "Konverter på enhet «%s» har ingen støttede inndataformat"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Converter on device %s has no supported output format"
-msgstr "Videoenheten aksepterte ikke ny bildefrekvensinnstilling."
+msgstr "Konverter på enhet «%s» har ingen støttede utdataformat"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Encoder on device %s has no supported input format"
-msgstr "Videoenheten aksepterte ikke ny bildefrekvensinnstilling."
+msgstr "Enkoder på enhet «%s» har ingen støttede inndataformat"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Encoder on device %s has no supported output format"
-msgstr "Videoenheten aksepterte ikke ny bildefrekvensinnstilling."
+msgstr "Enkoder på enhet «%s» har ingen støttede utdataformat"
 
-#, fuzzy
 msgid "Failed to start decoding thread."
-msgstr "Klarte ikke å dekode JPEG-bilde"
+msgstr "Klarte ikke å starte dekoding av tråden."
 
 msgid "Failed to process frame."
-msgstr ""
+msgstr "Kunne ikke behandle ramme."
 
 #, c-format
 msgid ""
@@ -373,11 +364,11 @@ msgstr "Enhet «%s» kan ikke fange data."
 msgid "Device '%s' is not a output device."
 msgstr "Enhet «%s» er ikke en utgangsenhet."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' is not a M2M device."
-msgstr "Enhet «%s» er ikke en utgangsenhet."
+msgstr "Enheten «%s» er ikke en M2M-enhet."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Could not dup device '%s' for reading and writing."
 msgstr "Kunne ikke åpne enhet «%s» for lesing og skriving."
 
@@ -426,6 +417,9 @@ msgstr "Endring av oppløsning under kjøring støttes ikke enda."
 
 msgid "Cannot operate without a clock"
 msgstr "Kan ikke operere uten en klokke"
+
+#~ msgid "Device '%s' does not support video capture"
+#~ msgstr "Enhet «%s» støtter ikke videoopptak"
 
 #~ msgid "Could not establish connection to sound server"
 #~ msgstr "Kunne ikke etablere tilkobling til lydtjener"
