--- a/po/nl.po
+++ b/po/nl.po
@@ -1,13 +1,13 @@
-# translation of gst-plugins-good-1.3.2.nl.po to Dutch
+# translation of gst-plugins-good-1.3.90.nl.po to Dutch
 # This file is put in the public domain.
 #
 # Freek de Kruijf <f.de.kruijf@gmail.com>, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 1.3.2\n"
+"Project-Id-Version: gst-plugins-good 1.3.90\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2014-07-19 16:30+0200\n"
-"PO-Revision-Date: 2014-05-22 00:41+0200\n"
+"POT-Creation-Date: 2015-06-07 09:35+0200\n"
+"PO-Revision-Date: 2014-07-22 10:55+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@gmail.com>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "Language: nl\n"
@@ -87,6 +87,9 @@ msgid "This file contains too many streams. Only playing first %d"
 msgstr ""
 "Dit bestand bevat te veel stromen. Alleen de eerste %d worden afgespeeld."
 
+msgid "Internal data flow error."
+msgstr "Interne fout in de gegevensdoorvoer."
+
 msgid ""
 "No supported stream was found. You might need to install a GStreamer RTSP "
 "extension plugin for Real media streams."
@@ -102,9 +105,6 @@ msgstr ""
 "Er is geen ondersteunde stroom gevonden. Misschien moet u meer "
 "overdrachtsprotocollen toestaan of anders ontbreekt de juiste GStreamer RTSP "
 "extensie-plugin."
-
-msgid "Internal data flow error."
-msgstr "Interne fout in de gegevensdoorvoer."
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -228,10 +228,6 @@ msgstr ""
 "Het stuurprogramma van apparaat '%s' ondersteunt geen bekende IO-methode."
 
 #, c-format
-msgid "Device '%s' does not support video capture"
-msgstr "Apparaat '%s' ondersteunt het opnemen van video niet"
-
-#, c-format
 msgid "Device '%s' is busy"
 msgstr "Apparaat '%s' is bezet"
 
@@ -301,33 +297,32 @@ msgid "Failed to change mute state for device '%s'."
 msgstr "De gedempte status van apparaat '%s' wijzigen is mislukt."
 
 msgid "Failed to allocated required memory."
-msgstr ""
+msgstr "Vereist geheugen toekennen is mislukt."
 
 msgid "Failed to allocate required memory."
-msgstr ""
+msgstr "Vereist geheugen toekennen is mislukt."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Converter on device %s has no supported input format"
-msgstr "Video-apparaat gebruikt een niet ondersteund pixelformaat."
+msgstr "Converter op apparaat %s heeft geen ondersteund invoerformaat"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Converter on device %s has no supported output format"
-msgstr "Video-apparaat gebruikt een niet ondersteund pixelformaat."
+msgstr "Converter op apparaat %s heeft geen ondersteund uitvoerformaat"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Encoder on device %s has no supported input format"
-msgstr "Video-apparaat gebruikt een niet ondersteund pixelformaat."
+msgstr "Codeerder op apparaat %s heeft geen ondersteund invoerformaat"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Encoder on device %s has no supported output format"
-msgstr "Video-apparaat gebruikt een niet ondersteund pixelformaat."
+msgstr "Codeerder op apparaat %s heeft geen ondersteund uitvoerformaat"
 
-#, fuzzy
 msgid "Failed to start decoding thread."
-msgstr "Kan de JPEG-afbeelding niet decoderen"
+msgstr "Beginnen met decoderen van thread is mislukt."
 
 msgid "Failed to process frame."
-msgstr ""
+msgstr "Bewerken van frame is mislukt."
 
 #, c-format
 msgid ""
@@ -428,6 +423,9 @@ msgstr "Tijdens het draaien kan de resolutie nog niet gewijzigd worden."
 
 msgid "Cannot operate without a clock"
 msgstr "Kan niet werken zonder een klok."
+
+#~ msgid "Device '%s' does not support video capture"
+#~ msgstr "Apparaat '%s' ondersteunt het opnemen van video niet"
 
 #~ msgid "Could not establish connection to sound server"
 #~ msgstr "Kan geen verbinding maken met de geluidsserver"
