tools: gst-play: add shortcuts to switch audio/subtitle/video tracks

--- a/tools/gst-play-1.0.1
+++ b/tools/gst-play-1.0.1
@@ -59,6 +59,15 @@ Reverse playback direction
 .B  t
 Cycle through trick modes
 .TP 8
+.B  a
+Switch audio track
+.TP 8
+.B  s
+Switch subtitle track
+.TP 8
+.B  v
+Switch video track
+.TP 8
 .B  >
 Skip to next item in playlist
 .TP 8
