--- a/po/hu.po
+++ b/po/hu.po
@@ -3,20 +3,20 @@
 # This file is distributed under the same license as the gstreamer package.
 #
 # Gabor Kelemen <kelemeng@gnome.hu>, 2006, 2007, 2008, 2009, 2010, 2012.
-# Balázs Úr <urbalazs@gmail.com>, 2014.
+# Balázs Úr <urbalazs@gmail.com>, 2014, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 1.3.2\n"
+"Project-Id-Version: gstreamer 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:28+0200\n"
-"PO-Revision-Date: 2014-05-23 21:08+0200\n"
+"POT-Creation-Date: 2015-06-24 11:13+0200\n"
+"PO-Revision-Date: 2015-06-14 08:31+0200\n"
 "Last-Translator: Balázs Úr <urbalazs@gmail.com>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.5\n"
+"X-Generator: Lokalize 1.2\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 msgid "Print the GStreamer version"
@@ -928,10 +928,10 @@ msgstr ""
 "tulajdonság beállítása a biztosított GstCaps objektumra hivatkozik."
 
 msgid "Caps Change Mode"
-msgstr ""
+msgstr "Képességek változtatása mód"
 
 msgid "Filter caps change behaviour"
-msgstr ""
+msgstr "Képességek változtatása viselkedés szűrése"
 
 msgid "No Temp directory specified."
 msgstr "Nincs megadva ideiglenes könyvtár."
@@ -999,9 +999,8 @@ msgstr "nagybetűk kényszerítése"
 msgid "force caps without doing a typefind"
 msgstr "nagybetűk kényszerítése betűkeresés nélkül"
 
-#, fuzzy
 msgid "Stream contains not enough data."
-msgstr "Az adatfolyam nem tartalmaz adatokat."
+msgstr "Az adatfolyam nem tartalmaz elég adatot."
 
 msgid "Stream contains no data."
 msgstr "Az adatfolyam nem tartalmaz adatokat."
@@ -1016,7 +1015,7 @@ msgid "writable"
 msgstr "írható"
 
 msgid "deprecated"
-msgstr ""
+msgstr "elavult"
 
 msgid "controllable"
 msgstr "vezérelhető"
