--- a/po/nl.po
+++ b/po/nl.po
@@ -1,17 +1,17 @@
-# translation of gstreamer-1.3.2.po to Dutch
+# translation of gstreamer-1.5.1.po to Dutch
 # Dutch translation of gstreamer
 # Copyright (C) 2003-2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gstreamer package.
 #
 # Thomas Vander Stichele <thomas@apestaart.org>, 2004.
 # Taco Witte <tcwitte@cs.uu.nl>, 2006.
-# Freek de Kruijf <f.de.kruijf@gmail.com>, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014.
+# Freek de Kruijf <f.de.kruijf@gmail.com>, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 1.3.2\n"
+"Project-Id-Version: gstreamer 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:28+0200\n"
-"PO-Revision-Date: 2014-05-22 00:46+0200\n"
+"POT-Creation-Date: 2015-06-24 11:13+0200\n"
+"PO-Revision-Date: 2015-06-13 18:14+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@gmail.com>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "Language: nl\n"
@@ -941,10 +941,10 @@ msgstr ""
 "GstCaps-object."
 
 msgid "Caps Change Mode"
-msgstr ""
+msgstr "Modus hoofd- kleine letters veranderen"
 
 msgid "Filter caps change behaviour"
-msgstr ""
+msgstr "Gedrag van hoofd- kleine letters veranderen filteren"
 
 msgid "No Temp directory specified."
 msgstr "Geen tijdelijke map opgegeven."
@@ -1012,9 +1012,8 @@ msgstr "forceer mogelijkheden"
 msgid "force caps without doing a typefind"
 msgstr "forceer mogelijkheden zonder een \"typefind\" te doen"
 
-#, fuzzy
 msgid "Stream contains not enough data."
-msgstr "Stroom zonder gegevens."
+msgstr "Stream bevat niet genoeg gegevens."
 
 msgid "Stream contains no data."
 msgstr "Stroom zonder gegevens."
@@ -1029,7 +1028,7 @@ msgid "writable"
 msgstr "schrijfbaar"
 
 msgid "deprecated"
-msgstr ""
+msgstr "verouderd"
 
 msgid "controllable"
 msgstr "controleerbaar"
