--- a/po/pl.po
+++ b/po/pl.po
@@ -1,13 +1,13 @@
 # Polish translation for gstreamer.
 # This file is distributed under the same license as the gstreamer package.
-# Jakub Bogusz <qboosh@pld-linux.org>, 2007-2014.
+# Jakub Bogusz <qboosh@pld-linux.org>, 2007-2015.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 1.3.2\n"
+"Project-Id-Version: gstreamer 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:28+0200\n"
-"PO-Revision-Date: 2014-05-22 18:22+0200\n"
+"POT-Creation-Date: 2015-06-24 11:13+0200\n"
+"PO-Revision-Date: 2015-06-10 22:04+0200\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "Language: pl\n"
@@ -933,10 +933,10 @@ msgstr ""
 "Ustawienie tej właściwości odwołuje się do przekazanego obiektu GstCaps."
 
 msgid "Caps Change Mode"
-msgstr ""
+msgstr "Tryb zmiany możliwości"
 
 msgid "Filter caps change behaviour"
-msgstr ""
+msgstr "Filtrowanie zachowania zmiany możliwości"
 
 msgid "No Temp directory specified."
 msgstr "Nie podano katalogu tymczasowego."
@@ -1004,9 +1004,8 @@ msgstr "wymuszenie możliwości"
 msgid "force caps without doing a typefind"
 msgstr "wymuszenie możliwości bez sprawdzania"
 
-#, fuzzy
 msgid "Stream contains not enough data."
-msgstr "Strumień nie zawiera danych."
+msgstr "Strumień nie zawiera wystarczająco dużo danych."
 
 msgid "Stream contains no data."
 msgstr "Strumień nie zawiera danych."
@@ -1021,7 +1020,7 @@ msgid "writable"
 msgstr "zapis"
 
 msgid "deprecated"
-msgstr ""
+msgstr "przestarzałe"
 
 msgid "controllable"
 msgstr "sterowanie"
