--- a/po/ru.po
+++ b/po/ru.po
@@ -4,13 +4,13 @@
 # Peter Astakhov <astakhovp@mail.ru>, 2005.
 # Артём Попов <artfwo@gmail.com>, 2009.
 # Pavel Maryanov <acid_jack@ukr.net>, 2009.
-# Yuri Kozlov <yuray@komyakino.ru>, 2010, 2011, 2012, 2013, 2014.
+# Yuri Kozlov <yuray@komyakino.ru>, 2010, 2011, 2012, 2013, 2014, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 1.3.2\n"
+"Project-Id-Version: gstreamer 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:28+0200\n"
-"PO-Revision-Date: 2014-05-22 20:12+0400\n"
+"POT-Creation-Date: 2015-06-24 11:13+0200\n"
+"PO-Revision-Date: 2015-06-13 11:32+0300\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
 "Language: ru\n"
@@ -932,10 +932,10 @@ msgstr ""
 "свойства увеличивает количество ссылок для предоставленного объекта GstCaps."
 
 msgid "Caps Change Mode"
-msgstr ""
+msgstr "Режим изменения возможностей"
 
 msgid "Filter caps change behaviour"
-msgstr ""
+msgstr "Фильтровать поведение изменения возможностей"
 
 msgid "No Temp directory specified."
 msgstr "Не задана временный (Temp) каталог."
@@ -1003,9 +1003,8 @@ msgstr "форсировать возможности"
 msgid "force caps without doing a typefind"
 msgstr "форсировать возможности без выполнения typefind"
 
-#, fuzzy
 msgid "Stream contains not enough data."
-msgstr "Поток не содержит данных."
+msgstr "Поток содержит недостаточно данных."
 
 msgid "Stream contains no data."
 msgstr "Поток не содержит данных."
@@ -1020,7 +1019,7 @@ msgid "writable"
 msgstr "записываемый"
 
 msgid "deprecated"
-msgstr ""
+msgstr "устаревший"
 
 msgid "controllable"
 msgstr "контролируемый"
