--- a/po/uk.po
+++ b/po/uk.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the gstreamer package.
 #
 # Maxim V. Dziumanenko <dziumanenko@gmail.com>, 2004-2007.
-# Yuri Chornoivan <yurchor@ukr.net>, 2011, 2012, 2013, 2014.
+# Yuri Chornoivan <yurchor@ukr.net>, 2011, 2012, 2013, 2014, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 1.3.2\n"
+"Project-Id-Version: gstreamer 1.5.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-06-07 09:28+0200\n"
-"PO-Revision-Date: 2014-05-22 07:45+0300\n"
+"POT-Creation-Date: 2015-06-24 11:13+0200\n"
+"PO-Revision-Date: 2015-06-10 22:43+0300\n"
 "Last-Translator: Yuri Chornoivan <yurchor@ukr.net>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
 "Language: uk\n"
@@ -929,10 +929,10 @@ msgstr ""
 "властивості призводить до посилання на поставлений об'єкт GstCaps."
 
 msgid "Caps Change Mode"
-msgstr ""
+msgstr "Режим зміни можливостей"
 
 msgid "Filter caps change behaviour"
-msgstr ""
+msgstr "Зміна поведінки можливостей фільтрування"
 
 msgid "No Temp directory specified."
 msgstr "Не вказано каталог тимчасових даних."
@@ -1000,9 +1000,8 @@ msgstr "примусово визначені можливості"
 msgid "force caps without doing a typefind"
 msgstr "примусово визначити можливості без виконання typefind"
 
-#, fuzzy
 msgid "Stream contains not enough data."
-msgstr "Потік не містить даних."
+msgstr "Потік не містить достатньо даних."
 
 msgid "Stream contains no data."
 msgstr "Потік не містить даних."
@@ -1017,7 +1016,7 @@ msgid "writable"
 msgstr "запис"
 
 msgid "deprecated"
-msgstr ""
+msgstr "застаріле"
 
 msgid "controllable"
 msgstr "контроль"
